# simple-onvif

./: MANIFEST.in  README.md  black.sh  clean.sh  flake8.sh  isort.cfg  isort.sh  main.py  mypy.sh  pytest.ini  python  setup.cfg  uninstall.sh
tester/: test_entrypoint.py
